@@ -57,12 +57,6 @@ dependencies {
 
 }
 
-tasks.withType<JavaExec> {
-    jvmArgs(
-        "--enable-native-access=ALL-UNNAMED"
-    )
-}
-
 compose.resources {
     publicResClass = true
     packageOfResClass = "com.felipegandra.generated.resources"
@@ -72,10 +66,6 @@ compose.resources {
 compose.desktop {
     application {
         mainClass = "MainKt"
-
-        jvmArgs += listOf(
-            "--enable-native-access=ALL-UNNAMED"
-        )
 
         nativeDistributions {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
